[gd_scene load_steps=9 format=3 uid="uid://gdi76tkrump4"]

[ext_resource type="FontFile" uid="uid://cicppa12acwpw" path="res://resources/fonts/alagard.ttf" id="1_8ls6f"]
[ext_resource type="Script" path="res://unit_type_dictionary/unit_type_dictionary_detailed_view.gd" id="2_0i6co"]
[ext_resource type="PackedScene" uid="uid://uu25grierx8r" path="res://unit_type_dictionary/unit_type_full_stat_container.tscn" id="2_m030a"]
[ext_resource type="Texture2D" uid="uid://vq25fygd70cn" path="res://resources/sprites/units/lance_cavalier.png" id="3_x3xre"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ew00q"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vjg3"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_7gfqx"]
default_font = ExtResource("1_8ls6f")
Panel/styles/panel = SubResource("StyleBoxFlat_ew00q")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_6vjg3")

[sub_resource type="Theme" id="Theme_w7fdy"]
default_font_size = 28

[node name="UnitTypeDictionaryDetailedView" type="HBoxContainer"]
custom_minimum_size = Vector2(335, 375)
offset_right = 335.0
offset_bottom = 375.0
theme = SubResource("Theme_7gfqx")
script = ExtResource("2_0i6co")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(335, 355)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_left = 5.0
offset_top = 1.0
offset_right = 334.0
offset_bottom = 370.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="MainContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HeaderContainer" type="VBoxContainer" parent="Panel/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="UnitType" type="Label" parent="Panel/MarginContainer/MainContainer/HeaderContainer"]
layout_mode = 2
theme = SubResource("Theme_w7fdy")
text = "Lance Cavalry"

[node name="MoveConContainer" type="VBoxContainer" parent="Panel/MarginContainer/MainContainer"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
size_flags_vertical = 10

[node name="MoveContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer/MoveConContainer"]
custom_minimum_size = Vector2(131, 20)
layout_mode = 2
size_flags_horizontal = 0

[node name="Header" type="Label" parent="Panel/MarginContainer/MainContainer/MoveConContainer/MoveContainer"]
layout_mode = 2
text = "Move"

[node name="Value" type="Label" parent="Panel/MarginContainer/MainContainer/MoveConContainer/MoveContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "5"

[node name="ConstitutionContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer/MoveConContainer"]
custom_minimum_size = Vector2(131, 20)
layout_mode = 2
size_flags_horizontal = 0

[node name="Header" type="Label" parent="Panel/MarginContainer/MainContainer/MoveConContainer/ConstitutionContainer"]
layout_mode = 2
text = "Constitution"

[node name="Value" type="Label" parent="Panel/MarginContainer/MainContainer/MoveConContainer/ConstitutionContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "10"

[node name="UnitTypeFullStatContainer" parent="Panel/MarginContainer/MainContainer" instance=ExtResource("2_m030a")]
layout_mode = 2

[node name="UnitIcon" type="TextureRect" parent="Panel"]
layout_mode = 2
offset_left = 241.0
offset_top = 24.0
offset_right = 305.0
offset_bottom = 88.0
texture = ExtResource("3_x3xre")
